# cgal-tutorials

./: README.md
01_points_and_segment/: CMakeLists.txt  points_and_segment.cpp
02_collinear/: exact_colinear.cpp
03_convex_hull/: CMakeLists.txt  array_convex_hull_2.cpp
04_algebraic_foundations/IntegralDomainWithoutDivision/: CMakeLists.txt  IntegralDomainWithoutDivision.cpp
04_algebraic_foundations/abs/: CMakeLists.txt  abs.cpp
04_algebraic_foundations/compare/: CMakeLists.txt  compare.cpp
04_algebraic_foundations/gcd/: CMakeLists.txt  gcd.cpp
04_algebraic_foundations/is_positive/: CMakeLists.txt  is_positive.cpp
04_algebraic_foundations/kth_root/: CMakeLists.txt  kth_root.cpp
04_algebraic_foundations/sign/: CMakeLists.txt  sign.cpp
04_algebraic_foundations/simplify/: CMakeLists.txt  simplify.cpp
04_algebraic_foundations/to_double/: CMakeLists.txt  to_double.cpp
04_algebraic_foundations/to_interval/: CMakeLists.txt  to_interval.cpp
04_algebraic_foundations/zero/: CMakeLists.txt  zero.cpp
collinear/: CMakeLists.txt  collinear.cpp
